--- a/templates/app/review/review.state-controls.html.twig
+++ b/templates/app/review/review.state-controls.html.twig
@@ -2,6 +2,15 @@
 {# reviewer:    CodeReviewer #}
 {# reviewModel: ReviewViewModel #}
 
+<form method="get"
+      action="{{ path('DR\\Review\\Controller\\App\\Review\\ReviewSummaryController', {reviewId:review.id, repositoryName: review.repository.name} )}}">
+    <button type="submit"
+            class="btn btn-outline-primary btn-sm"
+    >
+        Code summary
+    </button>
+</form>
+
 {% if review.state == 'open' and (reviewer == null or reviewer.state == 'open') %}
     <form method="POST"
           class="d-inline-block"
