--- a/templates/app/review/review.state-controls.html.twig
+++ b/templates/app/review/review.state-controls.html.twig
@@ -4,9 +4,7 @@
 
 <form method="get"
       action="{{ path('DR\\Review\\Controller\\App\\Review\\ReviewSummaryController', {reviewId:review.id, repositoryName: review.repository.name} )}}">
-    <button type="submit"
-            class="btn btn-outline-primary btn-sm"
-    >
+    <button type="submit" class="btn btn-outline-primary btn-sm">
         Code summary
     </button>
 </form>
