fix issue when having more than 1 repository in 123view

--- a/templates/app/review/review.state-controls.html.twig
+++ b/templates/app/review/review.state-controls.html.twig
@@ -3,7 +3,7 @@
 {# reviewModel: ReviewViewModel #}
 
 <form method="get"
-      action="{{ path('DR\\Review\\Controller\\App\\Review\\ReviewSummaryController', {reviewId:review.id, repositoryName: review.repository.name} )}}">
+      action="{{ path('DR\\Review\\Controller\\App\\Review\\ReviewSummaryController', {reviewId:review.projectId, repositoryName: review.repository.name} )}}">
     <button type="submit" class="btn btn-outline-primary btn-sm">
         Code summary
     </button>
